--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,9 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
         with:
           python-version: "3.10"
+      - name: Setup MPI
+        uses: mpi4py/setup-mpi@v1
       - name: Install hatch
         run: pipx install hatch
       - name: Run tests
