--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,6 +6,15 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+        # Add a mysql databse for SLURM to use
+        mysql:
+          image: mysql:8.0
+          env:
+            MYSQL_ROOT_PASSWORD: root
+          ports:
+            - "8888:3306"
+          options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3  
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
@@ -14,6 +23,8 @@ jobs:
           python-version: "3.10"
       - name: Setup MPI
         uses: mpi4py/setup-mpi@v1
+      - name: Setup SLURM
+        uses: koesterlab/setup-slurm-action@v1
       - name: Install hatch
         run: pipx install hatch
       - name: Run tests
