--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 dependencies = ["dask>=2024.1.1", "distributed>=2024.1.1"]
 
 [project.optional-dependencies]
-test = ["pytest>=7.2.2", "anyio"]
+test = ["pytest>=7.2.2", "pytest-timeout", "anyio"]
 mpi = ["mpi4py"]
 
 [project.urls]
